--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.2",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "10.3.2",
     "@nestjs/typeorm": "^10.0.2",
     "@pipets/validation-pipes": "^1.0.3",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.5",
     "reflect-metadata": "0.2.1",
     "request": "^2.88.2",
